update the catalina.sh